--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-ast",
+  "name": "typedoc-example-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "Generate examples of your api using pre-written tests",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
@@ -12,11 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^27.4.7",
+    "marked": "^4.0.10",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8"
   }
 }
