--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2018",
-    "module": "commonjs",
+    "module": "ESNext",
     "lib": [
       "esnext"
     ],
