--- a/package.json
+++ b/package.json
@@ -2,20 +2,27 @@
   "name": "typedoc-example-generator",
   "version": "1.0.0",
   "description": "Generate examples of your api using pre-written tests",
-  "main": "dist/index.js",
+  "exports": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc --sourceMap false --declaration false",
     "build:watch": "tsc --watch"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "marked": "^4.0.10",
+    "mdast-util-from-markdown": "^1.2.0",
+    "mdast-util-to-markdown": "^1.2.6",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.8"
+  },
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   }
 }
