--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "marked": "^4.0.10",
     "mdast-util-from-markdown": "^1.2.0",
+    "mdast-util-gfm-table": "^1.0.2",
     "mdast-util-to-markdown": "^1.2.6",
+    "micromark-extension-gfm-table": "^1.0.5",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
