--- a/package.json
+++ b/package.json
@@ -9,18 +9,16 @@
     "build": "tsc --sourceMap false --declaration false",
     "build:watch": "tsc --watch"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "marked": "^4.0.10",
-    "mdast-util-from-markdown": "^1.2.0",
-    "mdast-util-frontmatter": "^1.0.0",
-    "mdast-util-gfm-table": "^1.0.2",
-    "mdast-util-to-markdown": "^1.2.6",
-    "micromark-extension-frontmatter": "^1.0.0",
-    "micromark-extension-gfm-table": "^1.0.5",
+    "mdast-util-from-markdown": "0.8.5",
+    "mdast-util-frontmatter": "0.2.0",
+    "mdast-util-gfm-table": "0.1.6",
+    "mdast-util-to-markdown": "0.6.5",
+    "micromark-extension-frontmatter": "0.2.2",
+    "micromark-extension-gfm-table": "0.4.3",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
