--- a/packages/extractor/package.json
+++ b/packages/extractor/package.json
@@ -1,20 +1,40 @@
 {
   "name": "@xgen/extractor",
   "version": "0.0.1",
-  "description": "",
+  "description": "Extract examples of how to consume your api by re-using pre-written unit tests",
+  "types": "./dist/index.d.ts",
   "main": "dist/index.js",
   "scripts": {
+    "prebuild": "del-cli ./dist",
+    "build": "tsc --sourceMap false",
+    "build:watch": "tsc -w",
     "start": "node dist/index.js",
-    "build": "tsc --sourceMap false --declaration false",
-    "build:watch": "tsc --watch"
+    "start:watch": "nodemon dist/index.js",
+    "lint": "eslint \"./libs\" --ext tsx,ts",
+    "lint:fix": "eslint \"./libs\" --ext tsx,ts --fix",
+    "test": "jest --runInBand --config ./jest.config.js",
+    "format": "prettier ./libs/**/*.{ts,js} --write"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "doc-gen",
+    "typescript",
+    "ast",
+    "unit-tests"
+  ],
+  "author": "Safwan Shaheer <devorein00@gmail.com>",
+  "license": "MIT",
   "peerDependencies": {
     "typescript": "^4.0.0"
   },
   "dependencies": {
     "@types/node": "^17.0.9"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Devorein/xgen.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Devorein/xgen/issues"
+  },
+  "homepage": "https://github.com/Devorein/xgen#readme"
 }
