--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,17 +1,27 @@
 {
   "name": "@xgen/generator",
   "version": "0.0.1",
-  "description": "Generate examples of your api using pre-written unit tests",
+  "description": "Embed examples of your api in your markdown files",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "prebuild": "del-cli ./dist",
+    "build": "tsc --sourceMap false",
+    "build:watch": "tsc -w",
     "start": "node dist/index.js",
-    "build": "tsc --sourceMap false --declaration false",
-    "build:watch": "tsc --watch"
+    "start:watch": "nodemon dist/index.js",
+    "lint": "eslint \"./libs\" --ext tsx,ts",
+    "lint:fix": "eslint \"./libs\" --ext tsx,ts --fix",
+    "test": "jest --runInBand --config ./jest.config.js",
+    "format": "prettier ./libs/**/*.{ts,js} --write"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "mdast",
+    "markdown",
+    "ast"
+  ],
+  "author": "Safwan Shaheer <devorein00@gmail.com>",
+  "license": "MIT",
   "dependencies": {
     "mdast-util-from-markdown": "0.8.5",
     "mdast-util-frontmatter": "0.2.0",
@@ -23,7 +33,12 @@
   "devDependencies": {
     "@types/node": "^17.0.9"
   },
-  "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Devorein/xgen.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Devorein/xgen/issues"
+  },
+  "homepage": "https://github.com/Devorein/xgen#readme"
 }
