--- a/packages/docusaurus-plugin-xgen/package.json
+++ b/packages/docusaurus-plugin-xgen/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "docusaurus-plugin-example-generator",
+  "name": "docusaurus-plugin-xgen",
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
     "build": "tsc --sourceMap false --declaration false",
     "build:watch": "tsc --watch"
   },
@@ -13,5 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.9"
+  },
+  "dependencies": {
+    "@xgen/extractor": "0.0.1",
+    "@xgen/generator": "0.0.1"
   }
 }
