--- a/packages/docusaurus-plugin-xgen/package.json
+++ b/packages/docusaurus-plugin-xgen/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docusaurus-plugin-xgen",
+  "name": "docusaurus-plugin-exgen",
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
@@ -14,7 +14,7 @@
     "@types/node": "^17.0.9"
   },
   "dependencies": {
-    "@xgen/extractor": "0.0.1",
-    "@xgen/generator": "0.0.1"
+    "@exgen/extractor": "0.0.1",
+    "@exgen/generator": "0.0.1"
   }
 }
