--- a/packages/extractor/package.json
+++ b/packages/extractor/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@exgen/extractor",
   "version": "0.0.1",
-  "description": "Extract examples of how to consume your api by re-using pre-written unit tests",
+  "description": "Extract examples of how to consume your api from your unit tests",
   "types": "./dist/index.d.ts",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "prebuild": "del-cli ./dist",
     "build": "tsc --sourceMap false",
@@ -24,7 +24,7 @@
   "peerDependencies": {
     "typescript": "^4.0.0"
   },
-  "dependencies": {
+  "devDependencies": {
     "@types/node": "^17.0.9"
   },
   "repository": {
