--- a/packages/embedder/package.json
+++ b/packages/embedder/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "prepublishOnly": "npm run build",
     "prebuild": "del-cli ./dist",
     "build": "tsc --sourceMap false",
     "build:watch": "tsc -w",
@@ -41,5 +42,8 @@
   "bugs": {
     "url": "https://github.com/Devorein/exgen/issues"
   },
-  "homepage": "https://github.com/Devorein/exgen#readme"
+  "homepage": "https://github.com/Devorein/exgen#readme",
+  "publishConfig": {
+    "access": "public"
+  }
 }
