Added first test for extractor package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "baseUrl": "./",
     "watch": false,
     "types": [
-      "node"
+      "node",
+      "jest"
     ],
     "outDir": "./dist",
     "rootDir": "./libs"
