--- a/packages/extractor/package.json
+++ b/packages/extractor/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.9"
   },
   "repository": {
